# MRE-Rag

./: .env.example  .gitignore  Dockerfile  README.md  TESTING_GUIDE.md  docker-compose.yml  pyproject.toml  query_local.py  test_chunker.py  test_pipeline.py
src/: chunking.py  context_generator.py  crawler.py  embeddings.py  qdrant_manager.py  rag_pipeline.py  reranker.py  server.py
src/knowledge_graphs/: ai_hallucination_detector.py  ai_script_analyzer.py  hallucination_reporter.py  knowledge_graph_validator.py  parse_repo_into_neo4j.py  query_knowledge_graph.py
src/mre_rag.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/src/: crawler.py  embeddings.py  rag_pipeline.py  server.py
src/src/mre_rag.egg-info/: PKG-INFO
tests/: mock_ai_script.java  mock_ai_script.py  test_ai_hallucination.py  test_chunker.py  test_chunker_oversized.py  test_db.py  test_hybrid_pipeline.py  test_neo4j_connection.py  test_neo4j_parse_java.py  test_neo4j_parse_repo.py  test_neo4j_query.py  test_pipeline.py
tests/dummy_java/src/main/java/com/example/: DummyJavaService.java
